# electrolyzer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  pyproject.toml
docs/: alkaline_ref.md
electrolyzer/: __init__.py
electrolyzer/components/cell/: cell.py  pem_cell.py
electrolyzer/components/stack/: stack.py
electrolyzer/core/: bert.py  file_utils.py  utilities.py
electrolyzer/simulation/: base.py  bert.py  cell.py  cluster.py  curve_equation_templates.py  simulation_config.py  stack.py
electrolyzer/simulation/cell_models/: alkaline.py  pem.py
electrolyzer/tools/: modeling_schema.yaml
tests/: test_stack.py
