[build-system]
requires = ["setuptools >= 40.6.0", "wheel","setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "electrolyzer"
dynamic = ["version"]
authors = [{name = "NLR", email = "christopher.bay@nlr.gov"}]
readme = {file = "README.md", content-type = "text/markdown"}
description = "A controls-oriented engineering electrolyzer model."
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "matplotlib",
    "rainflow",
    "attrs",
    "jsonschema",
    "ruamel.yaml",
    "openmdao",
]
keywords = [
    "electrolyzer",
    "hydrogen",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
develop = [
    "pytest>=9",
    "pytest-subtests",
    "pytest-dependency",
    "pre-commit",
    "pytest_mock",
    "responses",
    "jupyter-book<2",
    "readthedocs-sphinx-ext",
    "ruff",
    "sphinx",
    "sphinxcontrib-napoleon",
    "isort",
    "networkx",
]
examples = ["jupyterlab"]
all = ["electrolyzer[develop,examples]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "electrolyzer",
    "electrolyzer/tools/modeling_schema.yaml",
    "electrolyzer/*",
    "library/*.yaml",
]

[tool.setuptools.dynamic]
version = {attr = "electrolyzer.__version__"}

[tool.coverage.run]
# Coverage.py configuration file
# https://coverage.readthedocs.io/en/latest/config.html
branch = true
source = ["electrolyzer/*"]
omit = [
  "setup.py",
  "tests/*"
]

[tool.pytest.ini_options]
python_files = [
  "tests/*.py",
]
testpaths = [
  "test/*.py",
  "test/glue_code/*.py",
]


[tool.isort]
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
known_third_party = [
    "numpy",
    "pandas",
    "scipy",
    "attr"
]
known_first_party = ["electrolyzer"]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
length_sort = true
lines_after_imports = 2
line_length = 100



[tool.ruff]
src = ["electrolyzer", "tests"]
line-length = 100
target-version = "py311"
fix = true
exclude = [
  ".git",
  "__pycache__",
  "old",
  "build",
  "dist",
  ".ruff_cache",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

# https://docs.astral.sh/ruff/rules/
select = [
  "F",
  "E",
  "W",
  # "N",  # TODO: renaming needs to be seriously cleaned up prior to using
  "C4",
  # "D",  # leave out until rebrand/refactor
  "UP",
  "BLE",
  # "FBT",  # TODO: consider alongside rebrand/refactor
  "B",
  "A",
  "LOG",
  "G",
  # "PT",  # TODO: very tedious for now
  "NPY",
  "PD",
  "PTH",
  "PERF",
  "Q",
  "FURB",
  "RUF",
]

ignore = [
  "E731",
  "E402",
  "D202",
  "D205",
  "D212",
  "D401",
  "PERF203",
  "PD011",
  "PD901",
  "RUF015",
  "N806",  # NOTE: many variable names use an uppercase for legitimate reasons
  "N802",  # NOTE: many function names use an uppercase for legitimate reasons
  "B905",

  # TODO: People who wrote warnings should decide on the appropriate stacklevel
  "B028",

  # TODO: People responsible for these errors will need to fix them accordingly as they are bugs
  "B006",
  "B008",
  "B023",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["E501", "D104", "F401"]
"test/*" = ["D100", "D101", "D102", "D103"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
explicit_start = false
# quote_representation = '"'  # NOTE: uncomment when issue is resolved: https://github.com/lyz-code/yamlfix/issues/252
sequence_style = "keep_style"
